--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,15 +1,15 @@
 {
   "version": 2,
-  "build": [
+  "builds": [
     {
-      "src": "./index.js",
-      "use": "@vercel/node"
+      "src": "index.js",
+      "use": "@now/node"
     }
   ],
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "/"
+      "dest": "index.js"
     }
   ]
 }
